--- a/.github/workflows/build_test_react.yml
+++ b/.github/workflows/build_test_react.yml
@@ -15,8 +15,8 @@ jobs:
 
     strategy:
       matrix:
-        node-version: [14.x, 16.x, 18.x]
-        # See supported Node.js release schedule at https://nodejs.org/en/about/releases/
+        node-version: [18.x]
+        # See supported Node.js release schedule at https://nodejs.org/en/about/releases/   [14.x, 16.x, 18.x]
 
     steps:
       - name: Checkout repo
@@ -39,10 +39,10 @@ jobs:
 
       - name: Upload coverage to Codecov
         uses: codecov/codecov-action@v3
-          with:
-            token: ${{ secrets.CODECOV_TOKEN }} # not required for public repos
-            #files: ./coverage1.xml,./coverage2.xml # optional
-            flags: unittests # optional
-            name: codecov-gl-poc # optional
-            fail_ci_if_error: true # optional (default = false)
-            verbose: true # optional (default = false)
+        with:
+          token: ${{ secrets.CODECOV_TOKEN }} # not required for public repos
+          #files: ./coverage1.xml,./coverage2.xml # optional
+          flags: unittests # optional
+          name: codecov-gl-poc # optional
+          fail_ci_if_error: true # optional (default = false)
+          verbose: true # optional (default = false)
