--- a/package.json
+++ b/package.json
@@ -10,8 +10,10 @@
         "@types/node": "^16.18.11",
         "@types/react": "^18.0.27",
         "@types/react-dom": "^18.0.10",
+        "axios": "^1.3.2",
         "react": "^18.2.0",
         "react-dom": "^18.2.0",
+        "react-router-dom": "^6.8.1",
         "react-scripts": "5.0.1",
         "typescript": "^4.9.4",
         "web-vitals": "^2.1.4"
@@ -55,6 +57,7 @@
         ]
     },
     "devDependencies": {
+        "@babel/plugin-transform-modules-commonjs": "^7.20.11",
         "@typescript-eslint/eslint-plugin": "^5.49.0",
         "@typescript-eslint/parser": "^5.49.0",
         "eslint": "^8.33.0",
