--- a/package.json
+++ b/package.json
@@ -36,7 +36,10 @@
         ]
     },
     "jest": {
-        "resetMocks": true
+        "resetMocks": true,
+        "transformIgnorePatterns": [
+            "node_modules/(?!axios)"
+        ]
     },
     "browserslist": {
         "production": [
