--- a/package.json
+++ b/package.json
@@ -11,10 +11,14 @@
         "@types/react": "^18.0.27",
         "@types/react-dom": "^18.0.10",
         "axios": "^1.3.2",
+        "grommet": "^2.29.1",
+        "grommet-icons": "^4.9.0",
+        "grommet-theme-hpe": "^4.2.0",
         "react": "^18.2.0",
         "react-dom": "^18.2.0",
         "react-router-dom": "^6.8.1",
         "react-scripts": "5.0.1",
+        "styled-components": "^5.3.6",
         "typescript": "^4.9.4",
         "web-vitals": "^2.1.4"
     },
@@ -54,8 +58,8 @@
         ]
     },
     "devDependencies": {
-        "@svgr/webpack": "^6.2.1",
         "@babel/plugin-transform-modules-commonjs": "^7.20.11",
+        "@svgr/webpack": "^6.2.1",
         "@typescript-eslint/eslint-plugin": "^5.49.0",
         "@typescript-eslint/parser": "^5.49.0",
         "eslint": "^8.33.0",
