--- a/.github/workflows/build_test_react.yml
+++ b/.github/workflows/build_test_react.yml
@@ -4,10 +4,7 @@
 name: Node.js CI
 
 on:
-  push:
-    branches: ["*"]
-  pull_request:
-    branches: ["main"]
+  workflow_call:
 
 jobs:
   build_test:
