--- a/package.json
+++ b/package.json
@@ -84,6 +84,7 @@
         "eslint-plugin-react": "^7.32.2",
         "eslint-plugin-react-hooks": "^4.6.0",
         "eslint-plugin-sonarjs": "^0.18.0",
+        "msw": "^1.1.0",
         "prettier": "^2.8.3"
     },
     "overrides": {
